--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <h1>Asynchronous JavaScript</h1>
 
 
-    <!-- <script src="./main1.js"></script> -->
-    <script src="./main2.js"></script>
+    <!-- <script src="./about Async JS/main1.js"></script> -->
+    <!-- <script src="./XHR obj/main2.js"></script> -->
+    <!-- <script src="./XHR + callbacks/main3.js"></script> -->
+    <script src="./about JSON/main4.js"></script>
+    <!-- <script src="./main5.js"></script> -->
+    <!-- <script src="./main6.js"></script> -->
 </body>
 </html>
