added callback hell folder

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- <script src="./about Async JS/main1.js"></script> -->
     <!-- <script src="./XHR obj/main2.js"></script> -->
     <!-- <script src="./XHR + callbacks/main3.js"></script> -->
-    <script src="./about JSON/main4.js"></script>
-    <!-- <script src="./main5.js"></script> -->
-    <!-- <script src="./main6.js"></script> -->
+    <!-- <script src="./about JSON/main4.js"></script> -->
+    <!-- <script src="./about JSON/main5.js"></script> -->
+    <script src="./callback hell/main6.js"></script>
 </body>
 </html>
