added promises folders

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <!-- <script src="./XHR + callbacks/main3.js"></script> -->
     <!-- <script src="./about JSON/main4.js"></script> -->
     <!-- <script src="./about JSON/main5.js"></script> -->
-    <script src="./callback hell/main6.js"></script>
+    <!-- <script src="./callback hell/main6.js"></script> -->
+    <!-- <script src="./promises/main7.js"></script> -->
+    <!-- <script src="./promises/main8.js"></script> -->
+    <!-- <script src="./promise chaining/main9.js"></script> -->
+    <!-- <script src="./promise chaining/main10.js"></script> -->
 </body>
 </html>
