fetch & async-await folder added

--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
     <!-- <script src="./promises/main8.js"></script> -->
     <!-- <script src="./promise chaining/main9.js"></script> -->
     <!-- <script src="./promise chaining/main10.js"></script> -->
+    <!-- <script src="./fetch api/main11.js"></script> -->
+    <!-- <script src="./fetch api/main12.js"></script> -->
+    <script src="./async-await/main13.js"></script>
 </body>
 </html>
